# mindweeper

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  builtin_config.c  config.c  config.h  dsdmine.ini  game_context.c  game_context.h  game_logic.c  game_logic.h  index.css  main.c  make_builtin_cfg.sh  mindweeper.ini  mindweeper.js  sprite_sheet.c  sprite_sheet.h  ui.c  ui.h  winmine.ini
assets/dsdmine/: LICENSE  README.md
src/: config.c  config.h  game_context.c  game_context.h  game_logic.h  main.c  sprite_sheet.c  sprite_sheet.h  ui.c  ui.h
tools/: make_builtin_cfg.c
web/: emscripten.css  index.html  mindweeper.wasm
